--- a/index.html
+++ b/index.html
@@ -10,11 +10,49 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <header>
-            <nav>
+		<header>
+			<p class="cupomDesconto">
+				Ganhe <span>R$10</span> no seu primeiro pedido! Utilize o cupom <span>DESCONTO10</span>
+			</p>
+
+			<div class="headerContainer">
+				<span>
+					<img src="images/header/avantiBlue.png" alt="Logo da Avanti em azul" />
+				</span>
+				<span>
+					<form id="formSearch">
+						<input type="text" name="search" id="search" placeholder=" Digite aqui o que você procura">
+						<button type="button" id="searchButton">
+							<img class="formImg" src="images/header/search.png" alt="Lupa de pesquisa"/>
+						</button>
+					</form>
+				</span>
+				<span class="userName">
+					<a href="#">
+						<img src="images/header/user.png" alt="Usuário" id="userIcon" />
+					</a>
+					<p>Olá,<br />Nome do Cliente</p>
+					<button type="button" id="cart">
+						<a href="#">
+							<img class="shoppingCart" src="images/header/cart.png" alt="Carrinho de compras" />
+						</a>
+					</button>
+				</span>
+			</div>
+
+			<nav>
 				<ul>
 					<li>
 						<a href="#">Todas as categorias</a>
+					</li>
+					<li>
+						<a href="#">Departamento</a>
+					</li>
+					<li>
+						<a href="#">Departamento</a>
+					</li>
+					<li>
+						<a href="#">Departamento</a>
 					</li>
 					<li>
 						<a href="#">Departamento</a>
