first version done

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 			<p class="cupomDesconto">
 				Ganhe <span>R$10</span> no seu primeiro pedido! Utilize o cupom <span>DESCONTO10</span>
 			</p>
-
 			<div class="headerContainer">
 				<span>
 					<img src="images/header/avantiBlue.png" alt="Logo da Avanti em azul" />
 				</span>
 				<span>
 					<form id="formSearch">
-						<input type="text" name="search" id="search" placeholder="Digite aqui o que você procura">
+						<input type="text" name="search" id="search" aria-label="Barra de pesquisa" placeholder="Digite aqui o que você procura">
 						<button type="button" id="searchButton">
 							<img class="formImg" src="images/header/search.png" alt="Botão de busca"/>
 						</button>
@@ -41,7 +40,6 @@
 					</div>
 				</span>
 			</div>
-
 			<nav>
 				<ul>
 					<li class="dropdown">
@@ -89,8 +87,7 @@
 			<section>
 				<div id="searchResult"></div>
 			</section>
-
-			<section class="hero">
+			<section class="featured">
 				<div>
 					<img src="images/hero.png" alt="Imagem de destaque do site onde está escrito: supersale, itens selecionados com até 50% off" />
 				</div>
@@ -117,7 +114,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -130,7 +127,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -143,7 +140,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -156,7 +153,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -169,7 +166,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -178,6 +175,8 @@
 
 				</div>
 			</section>
+
+
 
 
 			<section class="textContent">
@@ -238,6 +237,9 @@
 					</p>
 				</div>
 			</section>
+			
+			
+
 
 
 			<section>
@@ -258,7 +260,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -271,7 +273,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -284,7 +286,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -297,7 +299,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -310,7 +312,7 @@
 							<img src="images/product.png" alt="imagem do produto">
 						</div>
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-						<p class="discountCard">10% off</p>
+						<a href="#" target="_blank"><p class="discountCard">10% off</p></a>
 						<p class="priceInfo">R$100,00</p>
 						<p class="price">R$79,90</p>
 						<p class="paymentInfo">Ou em até 10x de R$ 7,90</p>
@@ -320,25 +322,120 @@
 				</div>
 			</section>
 
-			<section class="hero">
-				<div class="hero2">
+
+
+
+
+
+			<section class="featured">
+				<div class="featured2">
 					<p>Entre em contato conosco e verifique a disponibilidade para a sua região!</p>
-					<img src="images/heroAvanti.png" alt="Imagem da empresa Avanti" />
+					<img src="images/avantiImg.png" alt="Imagem da empresa Avanti" />
 				</div>
+			</section>
+
+			<section class="newsletter">
+				<h2>Cadastre-se na nossa <span>newsletter</span></h2>
+
+				<form action="" method="post" class="newsletterContainer">
+					<div class="newsletterItem">
+						<input type="text" name="clientName" id="clientName" aria-label="Digite seu e-mail" placeholder="Digite seu nome">
+					</div>
+
+					<div class="newsletterItem">
+						<input type="email" name="clientEmail" id="clientEmail" aria-label="Digite seu e-mail" placeholder="Digite seu e-mail">
+					</div>
+					<div class="newsletterItem">
+						<input type="checkbox" name="privacyCheck" value="1" required>
+						<label for="privacyCheck" class="privacyCheck">Estou de acordo com a <a href="#">Política de Privacidade</a></label>
+					</div>
+					<div class="newsletterItem newsletterButton">
+						<button class="subscribe">
+							<input type="submit" name="submit" aria-label="Botão para se cadastrar" value="Cadastrar">
+						</button>
+					</div>
+				</form>
 			</section>
 
 
 
-
+			
+			<section class="aboutSection">
+				<div class="socialMedias">
+					<div class="avantiSocial">
+						<img src="images/header/avantiBlue.png" alt="logo da Avanti"/>
+					</div>
+					<div class="socialIcons">
+						<a href="#" target="_blank">
+							<img src="images/social/instagram.png" alt="Instagram" />
+						</a>
+						<a href="#" target="_blank">
+							<img src="images/social/facebook.png" alt="Facebook" />
+						</a>
+						<a href="#" target="_blank">
+							<img src="images/social/youtube.png" alt="Youtube" />
+						</a>
+						<a href="#" target="_blank">
+							<img src="images/social/tiktok.png" alt="TikTok" />
+						</a>
+					</div>
+				</div>
+				<div class="contactLinks">
+					<div class="contactColumn">
+						<h4>Institucional</h4>
+						<h5><a href="#">Sobre Nós</a></h5>
+						<h5><a href="#">Nossas Lojas</a></h5>
+						<h5><a href="#">Privacidade e Segurança</a></h5>
+						<h5><a href="#">Termos e Condições</a></h5>
+					</div>
+					<div class="contactColumn">
+						<h4>Central de ajuda</h4>
+						<h5><a href="#">Fale Conosco</a></h5>
+						<h5><a href="#">Frete e Entrega</a></h5>
+						<h5><a href="#">Trocas e Devoluções</a></h5>
+						<h5><a href="#">Formas de Pagamento</a></h5>
+						<h5><a href="#">FAQ</a></h5>
+					</div>
+					<div class="contactColumn">
+						<h4>Atendimento</h4>
+						<h5><strong>Telefone</strong>: (00) 1234-5678</a></h5>
+						<h5><strong>E-mail:</strong> <a href="mailto:exemplo@exemplo.com">exemplo@exemplo.com</a></h5>
+						<h5>
+							<strong>Horário de atendimento:</strong><br />
+							<span>Segunda à Sábado: 07h00 às 23h00<br />
+							Domingos e Feriados: 07h00 às 21h00</span>
+						</h5>
+					</div>
+				</div>
+				<div class="paymentMethods">
+					<img src="images/creditCards/amex.png" alt="Amex" />
+					<img src="images/creditCards/master.png" alt="Mastercard" />
+					<img src="images/creditCards/visa.png" alt="Visa" />
+					<img src="images/creditCards/hipercard.png" alt="Hipercard" />
+					<img src="images/creditCards/elo.png" alt="Elo" />
+					<img src="images/creditCards/diners.png" alt="DinersClub" />
+					<img src="images/creditCards/paypal.png" alt="Paypal" />
+					<img src="images/creditCards/pix.png" alt="Pix" />
+					<img src="images/creditCards/boleto.png" alt="Boleto" />
+				</div>
+			</section>
 		</main>
 
         <footer>
-            rodapé
+          	<p class="footerText">
+				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti cupiditate earum nihil tempora ab aliquam voluptas reiciendis? Excepturi ipsum vel maiores nostrum, doloremque blanditiis adipisci ad est velit id, corrupti deleniti illo placeat. Deserunt doloremque repudiandae soluta tempora molestias.
+			</p>
+			<div class="footerIcons">
+				<img src="images/footer/letsEncrypt.png" alt="Let's Encrypt" />
+				<img src="images/footer/vtex-pci-200.png" alt="Certificado Vtex PCI certified" />
+				<img src="images/footer/avantiblack.png" alt="Avanti" />
+				<img src="images/footer/VTEX.png" alt="Vtex" />
+			</div>
         </footer>
 
 
 <!-- scripts -->
-		<script src="js/search.js"></script>
+		<script src="js/searchScript.js"></script>
 
     </body>
 </html>
