first version all done

--- a/index.html
+++ b/index.html
@@ -51,40 +51,554 @@
 					<li class="dropdown">
 						<a href="#"><strong>☰ Todas as categorias</strong></a>
 						<div class="dropdownContent">
-							<a href="#" class="drpDP">Departamento</a>
-							<a href="#" class="drpDP">Departamento</a>
-							<a href="#" class="drpDP">Departamento</a>
-							<a href="#" class="drpDP">Departamento</a>
-							<a href="#" class="drpDP">Departamento</a>
-							<a href="#" class="drpDP">Departamento</a>
-							<a href="#" class="drpDP">Departamento</a>
-							<a href="#" class="drpDP">Departamento</a>			
+							<div class="dropdownContainer">
+								<div class="dropdownColumns">
+									<ul class="drpLinks">
+										<li class="drpDP1">
+											<a href="#">Departamento</a>
+											<span>&#x2B9E;</span>
+										</li>
+										<li class="drpDP">
+											<a href="#">Departamento</a>
+											<span>&#x2B9E;</span>
+										</li class="drpDP">
+										<li class="drpDP">
+											<a href="#">Departamento</a>
+											<span>&#x2B9E;</span>
+										</li>
+										<li class="drpDP">
+											<a href="#">Departamento</a>
+											<span>&#x2B9E;</span>
+										</li>
+										<li class="drpDP">
+											<a href="#">Departamento</a>
+											<span>&#x2B9E;</span>
+										</li>
+										<li class="drpDP">
+											<a href="#">Departamento</a>
+											<span>&#x2B9E;</span>
+										</li>
+										<li class="drpDP">
+											<a href="#">Departamento</a>
+											<span>&#x2B9E;</span>
+										</li>
+										<li class="drpDP">
+											<a href="#">Departamento</a>
+											<span>&#x2B9E;</span>
+										</li>
+									</ul>
+									<ul class="categoryContainer">
+										<div class="categoryList">
+											<li class="categoryTitle">Categoria X</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</div>
+
+										<div class="categoryList">
+											<li class="categoryTitle">Categoria Y</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</div>
+										
+										<div class="categoryList">
+											<li class="categoryTitle">Categoria Z</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</div>
+									</ul>
+								</div>
+								<ul>
+									<li class="dropdownImg">
+										<div class="imgText">
+											<p>
+												Confira os<br />Produtos<br />
+												<strong>Que<br />Acabaram<br />de chegar</strong>
+											</p>
+											<a href="#"><button>Ver todos</button></a>
+										</div>
+										<div class="bg"></div>
+										<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+									</li>
+								</ul>						
+							</div>						
 						</div>
 					</li>
-					<li>
+
+					<li class="dropdown">
 						<a href="#">Departamento</a>
+						<div class="dropdownContentDP">
+							<div class="dropdownContainer">
+								<div class="departmentContainer">
+									<div>
+										<p><strong>Departamento</strong></p>
+									</div>
+									<div class="categoryContainerDP">
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+									</div>
+								</div>
+								<div>
+									<ul class="dropdownImg">
+										<div class="imgText">
+											<p>
+												Confira os<br />Produtos<br />
+												<strong>Que<br />Acabaram<br />de chegar</strong>
+											</p>
+											<a href="#"><button>Ver todos</button></a>
+										</div>
+										<div class="bg2"></div>
+										<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+									</ul>
+								</div>				
+							</div>
+						</div>
 					</li>
-					<li>
+					<li class="dropdown">
 						<a href="#">Departamento</a>
+						<div class="dropdownContentDP">
+							<div class="dropdownContainer">
+								<div class="departmentContainer">
+									<div>
+										<p><strong>Departamento</strong></p>
+									</div>
+									<div class="categoryContainerDP">
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+									</div>
+								</div>
+								<div>
+									<ul class="dropdownImg">
+										<div class="imgText">
+											<p>
+												Confira os<br />Produtos<br />
+												<strong>Que<br />Acabaram<br />de chegar</strong>
+											</p>
+											<a href="#"><button>Ver todos</button></a>
+										</div>
+										<div class="bg2"></div>
+										<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+									</ul>
+								</div>				
+							</div>
+						</div>
 					</li>
-					<li>
+					<li class="dropdown">
 						<a href="#">Departamento</a>
+						<div class="dropdownContentDP">
+							<div class="dropdownContainer">
+								<div class="departmentContainer">
+									<div>
+										<p><strong>Departamento</strong></p>
+									</div>
+									<div class="categoryContainerDP">
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+									</div>
+								</div>
+								<div>
+									<ul class="dropdownImg">
+										<div class="imgText">
+											<p>
+												Confira os<br />Produtos<br />
+												<strong>Que<br />Acabaram<br />de chegar</strong>
+											</p>
+											<a href="#"><button>Ver todos</button></a>
+										</div>
+										<div class="bg2"></div>
+										<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+									</ul>
+								</div>				
+							</div>
+						</div>
 					</li>
-					<li>
+					<li class="dropdown">
 						<a href="#">Departamento</a>
+						<div class="dropdownContentDP">
+							<div class="dropdownContainer">
+								<div class="departmentContainer">
+									<div>
+										<p><strong>Departamento</strong></p>
+									</div>
+									<div class="categoryContainerDP">
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+									</div>
+								</div>
+								<div>
+									<ul class="dropdownImg">
+										<div class="imgText">
+											<p>
+												Confira os<br />Produtos<br />
+												<strong>Que<br />Acabaram<br />de chegar</strong>
+											</p>
+											<a href="#"><button>Ver todos</button></a>
+										</div>
+										<div class="bg2"></div>
+										<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+									</ul>
+								</div>				
+							</div>
+						</div>
 					</li>
-					<li>
+					<li class="dropdown">
 						<a href="#">Departamento</a>
+						<div class="dropdownContentDP">
+							<div class="dropdownContainer">
+								<div class="departmentContainer">
+									<div>
+										<p><strong>Departamento</strong></p>
+									</div>
+									<div class="categoryContainerDP">
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+									</div>
+								</div>
+								<div>
+									<ul class="dropdownImg">
+										<div class="imgText">
+											<p>
+												Confira os<br />Produtos<br />
+												<strong>Que<br />Acabaram<br />de chegar</strong>
+											</p>
+											<a href="#"><button>Ver todos</button></a>
+										</div>
+										<div class="bg2"></div>
+										<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+									</ul>
+								</div>				
+							</div>
+						</div>
 					</li>
-					<li>
+					<li class="dropdown">
 						<a href="#">Departamento</a>
+						<div class="dropdownContentDP">
+							<div class="dropdownContainer">
+								<div class="departmentContainer">
+									<div>
+										<p><strong>Departamento</strong></p>
+									</div>
+									<div class="categoryContainerDP">
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+									</div>
+								</div>
+								<div>
+									<ul class="dropdownImg">
+										<div class="imgText">
+											<p>
+												Confira os<br />Produtos<br />
+												<strong>Que<br />Acabaram<br />de chegar</strong>
+											</p>
+											<a href="#"><button>Ver todos</button></a>
+										</div>
+										<div class="bg2"></div>
+										<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+									</ul>
+								</div>				
+							</div>
+						</div>
 					</li>
-					<li>
+					<li class="dropdown">
 						<a href="#">Departamento</a>
+						<div class="dropdownContentDP">
+							<div class="dropdownContainer">
+								<div class="departmentContainer">
+									<div>
+										<p><strong>Departamento</strong></p>
+									</div>
+									<div class="categoryContainerDP">
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+									</div>
+								</div>
+								<div>
+									<ul class="dropdownImg">
+										<div class="imgText">
+											<p>
+												Confira os<br />Produtos<br />
+												<strong>Que<br />Acabaram<br />de chegar</strong>
+											</p>
+											<a href="#"><button>Ver todos</button></a>
+										</div>
+										<div class="bg2"></div>
+										<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+									</ul>
+								</div>				
+							</div>
+						</div>
 					</li>
-					<li>
+					<li class="dropdown">
 						<a href="#">Departamento</a>
+						<div class="dropdownContentDP">
+							<div class="dropdownContainer">
+								<div class="departmentContainer">
+									<div>
+										<p><strong>Departamento</strong></p>
+									</div>
+									<div class="categoryContainerDP">
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+										<ul class="categoryList">
+											<li class="categoryTitle">Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+											<li>Categoria</li>
+										</ul>
+									</div>
+								</div>
+								<div>
+									<ul class="dropdownImg">
+										<div class="imgText">
+											<p>
+												Confira os<br />Produtos<br />
+												<strong>Que<br />Acabaram<br />de chegar</strong>
+											</p>
+											<a href="#"><button>Ver todos</button></a>
+										</div>
+										<div class="bg2"></div>
+										<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+									</ul>
+								</div>				
+							</div>
+						</div>
 					</li>
+
+
+
+						
 				</ul>
 			</nav>
         </header>
@@ -497,6 +1011,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<script src="js/searchScript.js"></script>
 		<script src="js/swiperScript.js"></script>
+		<script src="js/dropdownScript.js"></script>
 
     </body>
 </html>
