--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="favicon/favicon.png" type="image/x-icon" />
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-        <link href="css/layout.css" rel="stylesheet" type="text/css" />
+        <link href="css/main.css" rel="stylesheet" type="text/css" />
 		<link href="css/home.css" rel="stylesheet" type="text/css" />
     </head>
 
@@ -907,7 +907,7 @@
 			</section>
 
 			<section class="featured">
-				<div class="featured2">
+				<div class="featured-2">
 					<p>Entre em contato conosco e verifique a disponibilidade para a sua região!</p>
 					<img src="images/avantiImg.png" alt="Imagem da empresa Avanti" />
 				</div>
