--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 										</div>
 									</ul>
 								</div>
-								<ul>
-									<li class="dropdown-img">
+								<ul class="dropdown-img">
+									<li>
 										<div class="img-text">
 											<p>
 												Confira os<br />Produtos<br />
@@ -140,7 +140,7 @@
 						</div>
 					</li>
 
-					<li class="dropdown">
+					<li class="dropdown-dp">
 						<a href="#">Departamento</a>
 						<div class="dropdown-content-dp">
 							<div class="dropdown-container">
@@ -197,7 +197,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="dropdown">
+					<li class="dropdown-dp">
 						<a href="#">Departamento</a>
 						<div class="dropdown-content-dp">
 							<div class="dropdown-container">
@@ -254,7 +254,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="dropdown">
+					<li class="dropdown-dp">
 						<a href="#">Departamento</a>
 						<div class="dropdown-content-dp">
 							<div class="dropdown-container">
@@ -311,7 +311,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="dropdown">
+					<li class="dropdown-dp">
 						<a href="#">Departamento</a>
 						<div class="dropdown-content-dp">
 							<div class="dropdown-container">
@@ -368,7 +368,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="dropdown">
+					<li class="dropdown-dp">
 						<a href="#">Departamento</a>
 						<div class="dropdown-content-dp">
 							<div class="dropdown-container">
@@ -425,7 +425,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="dropdown">
+					<li class="dropdown-dp">
 						<a href="#">Departamento</a>
 						<div class="dropdown-content-dp">
 							<div class="dropdown-container">
@@ -482,7 +482,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="dropdown">
+					<li class="dropdown-dp">
 						<a href="#">Departamento</a>
 						<div class="dropdown-content-dp">
 							<div class="dropdown-container">
@@ -539,7 +539,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="dropdown">
+					<li class="dropdown-dp">
 						<a href="#">Departamento</a>
 						<div class="dropdown-content-dp">
 							<div class="dropdown-container">
