--- a/index.html
+++ b/index.html
@@ -50,42 +50,58 @@
 			<nav>
 				<ul>
 					<li class="dropdown">
-						<a href="#"><strong>☰ Todas as categorias</strong></a>
+						<a href="#" class="main-link">☰ Todas as categorias</a>
 						<div class="dropdown-content">
 							<div class="dropdown-container">
 								<div class="dropdown-columns">
 									<ul class="drp-links">
 										<li class="drp-dp-1">
 											<a href="#">Departamento</a>
-											<span>&#x2B9E;</span>
+											<span>
+												<img src="images/header/right-arrow.svg" alt="seta"/>
+											</span>
 										</li>
 										<li class="drp-dp">
 											<a href="#">Departamento</a>
-											<span>&#x2B9E;</span>
+											<span>
+												<img src="images/header/right-arrow.svg" alt="seta"/>
+											</span>
 										</li class="drp-dp">
 										<li class="drp-dp">
 											<a href="#">Departamento</a>
-											<span>&#x2B9E;</span>
+											<span>
+												<img src="images/header/right-arrow.svg" alt="seta"/>
+											</span>
 										</li>
 										<li class="drp-dp">
 											<a href="#">Departamento</a>
-											<span>&#x2B9E;</span>
+											<span>
+												<img src="images/header/right-arrow.svg" alt="seta"/>
+											</span>
 										</li>
 										<li class="drp-dp">
 											<a href="#">Departamento</a>
-											<span>&#x2B9E;</span>
+											<span>
+												<img src="images/header/right-arrow.svg" alt="seta"/>
+											</span>
 										</li>
 										<li class="drp-dp">
 											<a href="#">Departamento</a>
-											<span>&#x2B9E;</span>
+											<span>
+												<img src="images/header/right-arrow.svg" alt="seta"/>
+											</span>
 										</li>
 										<li class="drp-dp">
 											<a href="#">Departamento</a>
-											<span>&#x2B9E;</span>
+											<span>
+												<img src="images/header/right-arrow.svg" alt="seta"/>
+											</span>
 										</li>
 										<li class="drp-dp">
 											<a href="#">Departamento</a>
-											<span>&#x2B9E;</span>
+											<span>
+												<img src="images/header/right-arrow.svg" alt="seta"/>
+											</span>
 										</li>
 									</ul>
 									<ul class="category-container">
